Bug 219705 - fix java applet crash with Blackdown JVM. r=blizzard, sr=shaver